# vrchat-scaler

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
